--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,15 +56,11 @@
   cursor: pointer;
 }
 .close{
-  background-color: black;
-  color: white;
   position: fixed;
-  top:10px;
-  right: 10px;
-  border-radius:50%;
-  padding: 20px;
-  padding-top: 25px;
-  font-size: 30px;
+  background-color: rgba(0, 0, 0, 0.384);
+  height: 100vh;
+  z-index: 0;
+  width: 100vw;
 }
 @keyframes margin {
    0%{
@@ -330,6 +326,7 @@
 }
 .video video{
   width: 70%;
+  z-index: 100;
   height: 80%;
 }
 @media screen and (max-width:600px) {
@@ -509,6 +506,21 @@
   }
   .booking div:nth-child(2){
     padding: 30px 10px;
+  }
+  .video{
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.267);
+    z-index: 100;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
+  .video video{
+    width: 100%;
+    z-index: 100;
+    height: 50%;
   }
   
 }
